--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive coffee website - Bedimcode</title>
+        <title>Sitio web de café receptivo - YoelFH</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
